--- a/.github/workflows/devdotnet.yml
+++ b/.github/workflows/devdotnet.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Package
-      run: dotnet dotnet publish -r win-x64 -p:PublishSingleFile=true --self-contained false -c Release --output ./forza/devrel
+      run: dotnet dotnet publish -r win-x64 -p:PublishSingleFile=true -p:EnableWindowsTargeting=true --self-contained false -c Release --output ./forza/devrel
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.0
       with:
